--- a/index.html
+++ b/index.html
@@ -32,40 +32,40 @@
     </header>
     <div class="container">
         <div class="row" >9AM
-            <input type="text" id="nineAM" class="myInput">
-            <btn class="saveBtn">Save</btn>
+            <textarea value="9" id="nineAM" class="myInput"></textarea>
+            <btn value="9" class="saveBtn">Save</btn>
         </div>
         <div class="row" >10AM
-           <input type="text" id="tenAM" class="myInput">
-           <btn class="saveBtn">Save</btn>
+           <textarea value="10" id="tenAM" class="myInput"></textarea>
+           <btn value="10" class="saveBtn">Save</btn>
         </div>
         <div class="row" >11AM
-           <input type="text" id="elevenAM" class="myInput">
-           <btn class="saveBtn">Save</btn>
+           <textarea value="11" id="elevenAM" class="myInput"></textarea>
+           <btn value="11" class="saveBtn">Save</btn>
         </div>
         <div class="row" >12PM
-           <input type="text" id="twelvePM" class="myInput">
-           <btn class="saveBtn">Save</btn>
+           <textarea value="12" id="twelvePM" class="myInput"></textarea>
+           <btn value="12" class="saveBtn">Save</btn>
         </div>
         <div class="row" >1PM
-           <input type="text" id="onePM" class="myInput">
-           <btn class="saveBtn">Save</btn>
+           <textarea value="13" id="onePM" class="myInput"></textarea>
+           <btn value="13" class="saveBtn">Save</btn>
         </div>
         <div class="row" >2PM
-           <input type="text" id="twoPM" class="myInput">
-           <btn class="saveBtn">Save</btn>
+           <textarea value="14" id="twoPM" class="myInput"></textarea>
+           <btn value="14" class="saveBtn">Save</btn>
         </div>
         <div class="row" >3PM
-           <input type="text" id="threePM" class="myInput">
-           <btn class="saveBtn">Save</btn>
+           <textarea value="15" id="threePM" class="myInput"></textarea>
+           <btn value="15" class="saveBtn">Save</btn>
         </div>
         <div class="row" >4PM
-           <input type="text" id="fourPM" class="myInput">
-           <btn class="saveBtn">Save</btn>
+           <textarea value="16" id="fourPM" class="myInput"></textarea>
+           <btn value="16" class="saveBtn">Save</btn>
         </div>
         <div class="row" >5PM
-          <input type="text" id="fivePM" class="myInput">
-          <btn class="saveBtn">Save</btn>
+          <textarea value="17" id="fivePM" class="myInput"></textarea>
+          <btn value="17" class="saveBtn">Save</btn>
         </div>
     </div>
 
