Pushing up tweaked script.js file to fix local storage issue

--- a/index.html
+++ b/index.html
@@ -33,39 +33,39 @@
     <div class="container">
         <div class="row" >9AM
             <textarea value="9" id="nineAM" class="myInput"></textarea>
-            <btn value="9" class="saveBtn">Save</btn>
+            <btn value="9" class="saveBtn btn">Save</btn>
         </div>
         <div class="row" >10AM
            <textarea value="10" id="tenAM" class="myInput"></textarea>
-           <btn value="10" class="saveBtn">Save</btn>
+           <btn value="10" class="saveBtn btn">Save</btn>
         </div>
         <div class="row" >11AM
            <textarea value="11" id="elevenAM" class="myInput"></textarea>
-           <btn value="11" class="saveBtn">Save</btn>
+           <btn value="11" class="saveBtn btn">Save</btn>
         </div>
         <div class="row" >12PM
            <textarea value="12" id="twelvePM" class="myInput"></textarea>
-           <btn value="12" class="saveBtn">Save</btn>
+           <btn value="12" class="saveBtn btn">Save</btn>
         </div>
         <div class="row" >1PM
            <textarea value="13" id="onePM" class="myInput"></textarea>
-           <btn value="13" class="saveBtn">Save</btn>
+           <btn value="13" class="saveBtn btn">Save</btn>
         </div>
         <div class="row" >2PM
            <textarea value="14" id="twoPM" class="myInput"></textarea>
-           <btn value="14" class="saveBtn">Save</btn>
+           <btn value="14" class="saveBtn btn">Save</btn>
         </div>
         <div class="row" >3PM
            <textarea value="15" id="threePM" class="myInput"></textarea>
-           <btn value="15" class="saveBtn">Save</btn>
+           <btn value="15" class="saveBtn btn">Save</btn>
         </div>
         <div class="row" >4PM
            <textarea value="16" id="fourPM" class="myInput"></textarea>
-           <btn value="16" class="saveBtn">Save</btn>
+           <btn value="16" class="saveBtn btn">Save</btn>
         </div>
         <div class="row" >5PM
           <textarea value="17" id="fivePM" class="myInput"></textarea>
-          <btn value="17" class="saveBtn">Save</btn>
+          <btn value="17" class="saveBtn btn">Save</btn>
         </div>
     </div>
 
